# docs/swagger.json
@@ -281,6 +281,133 @@
         }
       }
     },
+    "/tasks/day": {
+      "get": {
+        "tags": [
+          "Tasks"
+        ],
+        "summary": "Get tasks by day",
+        "operationId": "getTasksByDay",
+        "description": "Get Task by day",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "day",
+            "required": true,
+            "schema": {
+              "type": "date",
+              "example": "2025-08-29"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Get Task by day",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 200
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Successfully found Tasks from 2025-08-29!"
+                    },
+                    "data": {
+                      "type": "object",
+                      "$ref": "#/components/schemas/tasks"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "$ref": "#/components/responses/404"
+          }
+        }
+      }
+    },
+    "/tasks/month": {
+      "get": {
+        "tags": [
+          "Tasks"
+        ],
+        "summary": "Get tasks by month",
+        "operationId": "getTasksByMonth",
+        "description": "Get Task by Month",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "year",
+            "schema": {
+              "type": "integer"
+            },
+            "example": 2025
+          },
+          {
+            "in": "query",
+            "name": "month",
+            "schema": {
+              "type": "integer"
+            },
+            "example": 8
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Get Task by month",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 200
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Successfully found Tasks from 2025-08-29!"
+                    },
+                    "data": {
+                      "type": "object",
+                      "$ref": "#/components/schemas/tasks"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "$ref": "#/components/responses/404"
+          }
+        }
+      }
+    },
     "/tasks/{id}": {
       "get": {
         "tags": [
