# src/controllers/tasks.js
@@ -4,6 +4,8 @@ import {
   getAllTasks,
   getTaskById,
   patchTask,
+  findTasksByDay,
+  findTasksByMonth,
 } from '../services/tasks.js';
 import createHttpError from 'http-errors';
 import { parsePaginationParams } from '../utils/parsePaginationParams.js';
@@ -31,9 +33,20 @@ export const getTasksController = async (req, res) => {
   });
 };
 
+export const getTasksByDay = async (req, res) => {
+  const { date } = req.query;
+  const userId = req.user._id;
+
+  if (!date) {
+    throw createHttpError(400, 'Date is required (YYYY-MM-DD)');
+  }
+
+  const tasks = await findTasksByDay(userId, date);
+  res.json({ tasks });
+};
+
 export const getTaskIDController = async (req, res, next) => {
   const { taskId } = req.params;
-  console.log('taskId:', taskId, 'req.user:', req.user);
   const task = await getTaskById(taskId, req.user._id);
 
   if (!task) {
@@ -47,14 +60,13 @@ export const getTaskIDController = async (req, res, next) => {
 };
 
 export const createTaskController = async (req, res) => {
-
   const taskFields = {
     task: req.body.task,
     timeDeclaration: req.body.timeDeclaration,
     timeReal: req.body.timeReal,
     taskType: req.body.taskType,
     date: req.body.date,
-    status:req.body.status,
+    status: req.body.status,
     userId: req.user._id,
   };
   const task = await createTask(taskFields);
@@ -65,21 +77,8 @@ export const createTaskController = async (req, res) => {
   });
 };
 
-// export const deleteTaskController = async (req, res) => {
-//   const { taskId } = req.params;
-// console.log('taskId:', taskId, 'req.user---:', req.user._id);
-//   const task = await deleteTask(taskId, req.user._id);
-
-//   if (!task) {
-//     throw createHttpError(404, 'Task not found');
-//   }
-
-//   res.status(204).send();
-// };
-
 export const deleteTaskController = async (req, res) => {
   const { taskId } = req.params;
-
 
   const task = await deleteTask(taskId, req.user._id);
 
@@ -95,7 +94,6 @@ export const changeTaskController = async (req, res, next) => {
 
   const result = await patchTask(taskId, req.user._id, {
     ...req.body,
-
   });
 
   if (!result) {
@@ -108,4 +106,23 @@ export const changeTaskController = async (req, res, next) => {
     message: 'Successfully patched a task!',
     data: result.task,
   });
+};
+
+export const getTasksByMonth = async (req, res) => {
+  const { year, month } = req.query;
+  const userId = req.user._id;
+  console.log('year, month===', year, month);
+  console.log('userId month===', userId);
+
+  if (!year || !month) {
+    throw createHttpError(400, 'Year and month are required');
+  }
+
+  const tasks = await findTasksByMonth(
+    userId,
+    parseInt(year, 10),
+    parseInt(month, 10),
+  );
+
+  res.json({ tasks });
 };
